client フレームのUIを実装

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,40 @@
       <button id="btn-frame-next"><i class="fa fa-angle-right"></i></button>
     </div>
     <button id="btn-play"><i class="fa fa-play"></i></button>
+    <div>
+      <ul id="menu-frames">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
