吹き出しのUIを実装

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,10 @@
       <button id="btn-frame-next"><i class="fa fa-angle-right"></i></button>
     </div>
     <button id="btn-play"><i class="fa fa-play"></i></button>
+    <div id="menu-frames-tool">
+      <button><i class="fa fa-plus" aria-hidden="true"></i></button>
+      <button><i class="fa fa-minus" aria-hidden="true"></i></button>
+    </div>
   <ul id="menu-frames">
     <li></li>
     <li></li>
